# portfolio

./: .env.example  config.ini.example  pyproject.toml  utils.py
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blognew_options.py  0003_alter_blognew_options_alter_newcategory_options_and_more.py
blog/static/blog/: blog_page.css
blog/static/blog/css/: index.css
blog/static/blog/css/sections/: _footer_section.css  _footnote.css  _form_section.css  _skills_section.css
blog/static/blog/extra/: null.css
blog/templates/blog/: blog.html  index.html  view_new.html
blog/templates/blog/inc/section_templates/: _first_section_index.html  _footer_section.html  _footnote.html  _form_section.html  _skills_section.html
blog/templatetags/: blog_tags.py
portfolio/: settings.py  urls.py
static/blog/: blog_page.css
static/blog/css/: base_page.css  blog_page.css  index.css
static/blog/css/sections/: _footnote.css  _form_section.css
templates/: base.html  base_blog.html
templates/inc/: _category_sidebar.html
