[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["korchizhinskiy <korchizhinskiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
django-stubs = "^1.12.0"
pyright = "^1.1.267"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
